--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
-#graphPerf2d {
+#graphPerf2d1, #graphPerf2d2, #graphPerf2d3, #graphPerf2d4 {
   width: 160px;
   height:60px;
-}
-
-#graphRange52w {
-  width: 600px;
-  height:400px;
 }
 
 .meter {
